// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleHeader Breaking - Within the first minute of update 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa frrTdE"
    >
      <div
        class="sc-bwzfXH htoLMg"
      >
        <div
          class="sc-ifAKCX iDsMnF"
        >
          <div
            class="sc-dnqmqq bGasAc"
          >
            <div
              class="sc-gZMcBi bcfOTp"
            >
              <div
                class="sc-VigVT jaFwsE"
              >
                ■
              </div>
              <div
                class="sc-fjdhpX cvtGYv"
              >
                BREAKING
              </div>
            </div>
          </div>
          <div
            class="sc-EHOje cDoFHw"
            data-testid="UpdatedTime"
          >
            11.30pm
          </div>
        </div>
      </div>
      <h2
        class="sc-htoDjs cSadCi"
      >
        This is the headline
      </h2>
    </div>
  </div>
</body>
`;

exports[`ArticleHeader Not breaking - Within the first minute of update 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa frrTdE"
    >
      <div
        class="sc-bwzfXH htoLMg"
      >
        <div
          class="sc-ifAKCX iDsMnF"
        >
          <div
            class="sc-EHOje cDoFHw"
            data-testid="UpdatedTime"
          >
            11.30pm
          </div>
        </div>
      </div>
      <h2
        class="sc-htoDjs cSadCi"
      >
        This is the headline
      </h2>
    </div>
  </div>
</body>
`;
